temporarily removed download

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-<!-- Global Site Tag (gtag.js) - Google Analytics -->
+    <!-- Global Site Tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-84742341-2"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -210,7 +210,7 @@
     </div>
 </section>
 
-    <aside class="bg-dark">
+  <!--    <aside class="bg-dark">
       <div class="container text-center">
           <div class="call-to-action">
               <h2>Download version 0.2.0-incubating preview build</h2>
@@ -218,7 +218,7 @@
           </div>
       </div>
   </aside>
-
+ -->
   <section id="contact">
     <div class="container">
         <div class="row">
