fixed sample typo

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
-                                Spark Scala Smaple
+                                Spark Scala Sample
                             </div>
                         </div>
                     </div>
@@ -200,7 +200,7 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
-                                PySpark Smaple
+                                PySpark Sample
                             </div>
                         </div>
                     </div>
