added downloads page with the 0.2.0-incubating release

--- a/index.html
+++ b/index.html
@@ -63,19 +63,22 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a class="page-scroll" href="#about">About</a>
+                    <a class="page-scroll" href="http://amaterasu.incubator.apache.org/#about">About</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#features">Features</a>
+                    <a class="page-scroll" href="http://amaterasu.incubator.apache.org/#features">Features</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#samples">Samples</a>
+                    <a class="page-scroll" href="http://amaterasu.incubator.apache.org/downloads.html">Downloads</a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="http://amaterasu.incubator.apache.org/#samples">Samples</a>
                 </li>
                   <li>
-                    <a class="page-scroll" href="#docs">Docs (coming soon)</a>
+                    <a class="page-scroll" href="http://amaterasu.incubator.apache.org/#docs">Docs (coming soon)</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#contact">Contact</a>
+                    <a class="page-scroll" href="http://amaterasu.incubator.apache.org/#contact">Contact</a>
                 </li>
             </ul>
         </div>
@@ -252,6 +255,23 @@
             </a>
         </div>
     </div>
+</section>
+
+  <section id="disclaimer">
+  <hr>
+  <div class="container">
+    <img src="img/incubator_feather_egg_logo.png" height="60">
+    <br>
+    <br>
+    <p style="font-size: 12px; line-height: 1.5em;">
+    Apache Amaterasu is an effort undergoing incubation at The Apache Software Foundation (ASF), sponsored by the Incubator. Incubation is required of all newly accepted projects until a further review indicates that the infrastructure, communications, and decision making process have stabilized in a manner consistent with other successful ASF projects. While incubation status is not necessarily a reflection of the completeness or stability of the code, it does indicate that the project has yet to be fully endorsed by the ASF.
+    </p>
+    <p style="font-size: 12px; line-height: 1.5em; margin-top: 2em; margin-bottom: 2em;">
+            Copyright © 2017 <a href="http://www.apache.org/" target="_blank">The Apache Software Foundation</a>
+    <br>
+    Apache, Apache Amaterasu (incubating), the Apache feather and the Gobblin logo are trademarks of The Apache Software Foundation
+    </p>
+  </div>
 </section>
 
   <!-- jQuery -->
