fixed navigation back to home

--- a/downloads.html
+++ b/downloads.html
@@ -55,7 +55,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="#page-top">Apache Amaterasu</a>
+            <a class="navbar-brand page-scroll" href="http://amaterasu.incubator.apache.org/#page-top">Apache Amaterasu</a>
             <!-- <img src="img/amaterasu_logo.jpg" /> -->
         </div>
 
